# L

./: .gitignore  .woodpecker.yml  AGENTS.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  build.rs  deny.toml  profile-README.md  smithery.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
android-app/: gradle.properties  settings.gradle
android-app/app/: build.gradle  check-assets.sh  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: app.js  index.html  style.css
android-app/app/src/main/java/ai/lai/assistant/: AssistActivity.kt  LaiDaemon.kt  LaiRecognitionService.kt  LaiService.kt  LaiVoiceInteractionService.kt  LaiVoiceInteractionSession.kt  LaiVoiceInteractionSessionService.kt  MainActivity.kt  Rpc.kt  TtsManager.kt
android-app/app/src/main/res/drawable/: ic_launcher.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: lai_recognition_service.xml  lai_voice_interaction_service.xml  network_security_config.xml
android-app/app/src/test/java/ai/lai/assistant/: RpcTest.kt
android-app/gradle/: asset-check.gradle.kts
android-app/ndk-wrap/: aarch64-linux-android24-clang  armv7a-linux-androideabi24-clang  i686-linux-android24-clang  llvm-ar  x86_64-linux-android24-clang
android-app/scripts/: rotate-keystore.sh
assistant/: Cargo.toml
assistant/src/: agent.rs  http.rs  lib.rs  llm.rs  mcp_client.rs  mcp_server.rs  personality.rs
assistant/src/actions/: alarm.rs  battery.rs  call.rs  camera.rs  contacts.rs  location.rs  memory.rs  mod.rs  notification.rs  reminder.rs  schedule.rs  sms.rs  timer.rs  web.rs
assistant/src/apps/: mod.rs
assistant/src/engines/: mod.rs
assistant/src/intent/: mod.rs  nlp.rs  schema.rs
assistant/src/memory/: history.rs  mod.rs  preferences.rs
assistant/src/multimodal/: mod.rs
assistant/src/proactive/: mod.rs
assistant/src/speech/: audio.rs  capture.rs  mod.rs  stt.rs  tts.rs  vad.rs
athena/: Cargo.toml  README.md
athena/src/: error.rs  lib.rs
athena/src/bankai/: eval.rs  mod.rs
athena/src/entity/: mod.rs
athena/src/inference/: download.rs  remote.rs
athena/src/primitive/: mod.rs
athena/tests/: mcp_integration.rs
bridge/src/: index.js
docs/: BRAND.md  ELEVATING_LAVERNA.md  bio.md  brand.md  companion-design.md  lai-verdict-contract.md  laverna-roadmap-guide.md  mcp-registry.md
gate/: Cargo.toml  README.md
gate/src/: main.rs
lai-core/: Cargo.toml
lai-core/src/: domain.rs  error.rs  formula.rs  lib.rs
lai-core/src/primitive/: eval.rs  mod.rs  nand.rs
laverna-wasm/: Cargo.toml
proof/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
proof/entities/: chakras.toml
proof/scripts/: export-static.sh  export.sh
proof/src/: error.rs  lib.rs  main.rs  strategy.rs
proof/src/companion/: memory.rs
proof/src/compute/: mod.rs  parser.rs
proof/src/descent/: mod.rs
proof/src/domain_graph/: mod.rs
proof/src/entity/: mod.rs
proof/src/formula/: mod.rs  registry.rs
proof/src/nlp/: mod.rs
proof/src/optimize/: milp.rs  mod.rs
proof/src/primitive/: dag.rs  expr.rs  nand_continuous.rs
proof/src/validation/: math_gate.rs
proof/src/verify/: verifier.rs
proof/tests/: mcp_parity.rs  route_purity.rs  self_classification.rs
scripts/: export.sh  get-models.sh  install-lai.sh  install-termux.sh  make-src-archive.sh
src/: inference.rs  lib.rs  main.rs  strategy.rs
src/asauchi/: mod.rs
src/astrology/: aspects.rs  classifier.rs  mod.rs  vedic.rs
src/bankai/: mod.rs  verifier.rs
src/chart/: mod.rs  personality.rs
src/cli/: mod.rs
src/companion/: mod.rs
src/compute/: parser.rs
src/csp/: mod.rs
src/descent/: mod.rs
src/domain_graph/: axis.rs  mod.rs
src/entity/: mod.rs
src/ephemeris/: mod.rs
src/formula/: mod.rs  registry.rs
src/gyro/: dynamics.rs  mod.rs  router.rs  state.rs
src/mcp/: mod.rs
src/primitive/: arithmetic.rs  mod.rs  nand.rs
src/router/: mod.rs  route.rs
src/sandbox/: mod.rs
src/shikai/: mod.rs
src/validation/: confidence_gate.rs  math_gate.rs
src/verify/: verifier.rs
src/wheel/: graph.rs  nodes.rs
src/zanpakuto/: mod.rs
tests/: energy_efficiency_integration.rs  route_purity.rs  self_classification.rs  strategize_determinism.rs
