[workspace]
resolver = "2"
members = [
    "lai-core",
    "proof",
    "gate",
    "athena",
    "proof/laverna-wasm",
    "gate/cid-wasm",
    "assistant",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
repository = "https://github.com/nutypebuddha/L"
homepage = "https://github.com/nutypebuddha/L"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
