[package]
name = "laverna"
version = "0.4.0"
edition = "2021"
description = "L.ai — deterministic reasoning engine + per-token validation (NAND-to-verify, CID gates, Tanto compute)"
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
license = "Apache-2.0"
publish = true
repository = "https://github.com/nutypebuddha/lai"
homepage = "https://github.com/nutypebuddha/lai"
keywords = ["reasoning", "proof", "validation", "deterministic", "lai"]
categories = ["science", "mathematics", "compilers", "cryptography"]

[[bin]]
name = "lai"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Pattern matching
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

# TOML parsing
toml = "0.8"

# Timezone resolution (IANA tz database) — Part 1.1 mandatory explicit timezone
chrono = "0.4"
chrono-tz = "0.10"

# Compute
vsop87 = "3.0.0"
astro = "2.0.0"
xalen-vedic = "0.6"
xalen-houses = "0.6"
xalen-ayanamsa = "0.6"
xalen-time = "0.6"
xalen-coords = "0.6"

# Gate (CID) — per-token validation + Tanto compute engine
cid = { package = "lai-gate", path = "../gate" }

# Web search / World Bank stats (optional)
ureq = { version = "3", default-features = false, features = ["json"], optional = true }

# MILP solver (optional, T46)
good_lp = { version = "1", default-features = false, features = ["microlp"], optional = true }

# Graph algorithms (optional, T47)
petgraph = { version = "0.8", optional = true }

# Benchmark harness (optional)
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]
tempfile = "3"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[features]
default = []  # minimal: no heavy deps, fast builds
mcp = ["websearch"]
websearch = ["dep:ureq"]
budget = []
bench = ["dep:criterion"]
llm = []  # marker only — stub inference module, no heavy deps
milp = ["dep:good_lp"]
graph = ["dep:petgraph"]
