[package]
name = "laverna"
version = "0.4.2"
edition = "2021"
description = "L.ai — deterministic reasoning engine + per-token validation (NAND-to-verify, CID gates, Tanto compute)"
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
license = "Apache-2.0"
publish = true
repository = "https://github.com/nutypebuddha/L"
homepage = "https://github.com/nutypebuddha/L"
keywords = ["reasoning", "proof", "validation", "deterministic", "lai"]
categories = ["science", "mathematics", "compilers", "cryptography"]

[[bin]]
name = "lai"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Pattern matching
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

# TOML parsing
toml = "0.8"

# Timezone resolution (IANA tz database) — Part 1.1 mandatory explicit timezone
chrono = "0.4"
chrono-tz = "0.10"

# Compute
vsop87 = "3.0.0"
astro = "2.0.0"
xalen-vedic = "0.6"
xalen-houses = "0.6"
xalen-ayanamsa = "0.6"
xalen-time = "0.6"
xalen-coords = "0.6"

# Gate (CID) — per-token validation + Tanto compute engine
cid = { package = "lai-gate", path = "../gate" }

# Athena — relational intelligence engine (formulas, wheel, entity system)
athena = { path = "../athena", default-features = false }

# Shared core types (domain, formula, primitive, errors)
lai-core = { path = "../lai-core" }

# Web search / World Bank stats (optional)
ureq = { version = "3", default-features = false, features = ["json"], optional = true }

# MILP solver (optional, T46)
good_lp = { version = "1", default-features = false, features = ["microlp"], optional = true }

# Graph algorithms (optional, T47)
petgraph = { version = "0.8", optional = true }

# Benchmark harness (optional)
criterion = { version = "0.5", features = ["html_reports"], optional = true }

# Athena optional deps (MCP server, LLM inference)
rmcp = { version = "1.4", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread", "macros"], optional = true }
llama-gguf = { version = "0.10", features = ["cpu"], optional = true }
dirs = "5"
sha2 = { version = "0.10", optional = true }

# Assistant — voice-first phone assistant (optional)
assistant = { path = "../assistant", optional = true }

[dev-dependencies]
tempfile = "3"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[features]
default = ["assistant", "mcp", "websearch", "budget", "milp", "graph"]
mcp = ["websearch", "dep:rmcp", "dep:tokio", "athena/mcp", "assistant/mcp"]
websearch = ["dep:ureq"]
budget = ["athena/budget"]
bench = ["dep:criterion"]
llm = ["athena/llm", "dep:llama-gguf", "dep:tokio", "dep:sha2"]
milp = ["dep:good_lp"]
graph = ["dep:petgraph"]
assistant = ["dep:assistant", "dep:tokio"]
# Enables the assistant's outbound web tools (search/fetch/http_request).
# Requires the assistant feature. Off in the default build; the Android daemon
# turns it on so the on-device agent can reach the open internet.
assistant-web = ["assistant", "assistant/web"]
